--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-vue-next": "^0.544.0",
     "vue": "^3.5.22"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.3.3",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
   }
