--- a/.github/workflows/main-ci-cd.yml
+++ b/.github/workflows/main-ci-cd.yml
@@ -13,29 +13,32 @@ jobs:
   security-scan:
     uses: ./.github/workflows/reusable-security-scan.yml
 
-  docker-build-push:
-    needs: [test-build, security-scan]
-    if: github.ref == 'refs/heads/master'
-    uses: ./.github/workflows/reusable-docker-build-push.yml
-    with:
-      registry: ghcr.io
-      image-name: ${{ github.repository }}
+ docker-build-push:
+  needs: [test-build, security-scan]
+  if: github.ref == 'refs/heads/master'
+  uses: ./.github/workflows/reusable-docker-build-push.yml
+  secrets: inherit
+  with:
+    registry: ghcr.io
+    image-name: ${{ github.repository }}
 
-  deploy:
-    needs: docker-build-push
-    if: github.ref == 'refs/heads/master'
-    uses: ./.github/workflows/reusable-deploy.yml
-    with:
-      k8s-namespace: todo-app
-      image: ghcr.io/${{ github.repository }}:latest
+deploy:
+  needs: docker-build-push
+  if: github.ref == 'refs/heads/master'
+  uses: ./.github/workflows/reusable-deploy.yml
+  secrets: inherit
+  with:
+    k8s-namespace: todo-app
+    image: ghcr.io/${{ github.repository }}:latest
 
-  notify:
-    needs: [test-build, docker-build-push, deploy]
-    if: always()
-    uses: ./.github/workflows/reusable-notify.yml
-    with:
-      workflow-status: ${{ needs.deploy.result || needs.docker-build-push.result || needs.test-build.result }}
-      branch: ${{ github.ref }}
+notify:
+  needs: [test-build, docker-build-push, deploy]
+  if: always()
+  uses: ./.github/workflows/reusable-notify.yml
+  secrets: inherit
+  with:
+    workflow-status: ${{ needs.deploy.result || needs.docker-build-push.result || needs.test-build.result || 'success' }}
+    branch: ${{ github.ref }}
 
   # Auto-merge trigger
   trigger-auto-merge:
