--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -16,6 +16,7 @@ permissions:
 
 env:
   MERGE_METHOD: squash
+  AUTO_MERGE_LABEL: auto-merge
 
 jobs:
   auto-merge:
@@ -25,6 +26,7 @@ jobs:
       (github.event.pull_request.base.ref == 'master' || github.event.pull_request.base.ref == 'develop')
 
     steps:
+    # 1️⃣ Check if PR is mergeable
     - name: Check if PR is mergeable
       id: check-mergeable
       uses: actions/github-script@v7
@@ -32,13 +34,13 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const pull_number = context.issue.number;
-          const { data: pr } = await github.rest.pulls.get({
+          let { data: pr } = await github.rest.pulls.get({
             owner: context.repo.owner,
             repo: context.repo.repo,
             pull_number
           });
 
-          // Sometimes GitHub returns mergeable=null; wait a bit and retry
+          // Retry if mergeable is null
           let retries = 3;
           while (pr.mergeable === null && retries > 0) {
             core.info('Waiting for GitHub to calculate mergeability...');
@@ -48,8 +50,7 @@ jobs:
               repo: context.repo.repo,
               pull_number
             });
-            pr.mergeable = retry.data.mergeable;
-            pr.mergeable_state = retry.data.mergeable_state;
+            pr = retry.data; // update entire PR object
             retries--;
           }
 
@@ -62,30 +63,33 @@ jobs:
           }
         result-encoding: string
 
-    - name: Add merge label if PR is clean
+    # 2️⃣ Add auto-merge label if PR is clean
+    - name: Add auto-merge label
       if: ${{ steps.check-mergeable.outputs.result == 'true' }}
       uses: actions/github-script@v7
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const pull_number = context.issue.number;
-          core.info('Adding label "auto-merge"...');
+          core.info(`Adding label "${process.env.AUTO_MERGE_LABEL}"...`);
           await github.rest.issues.addLabels({
             owner: context.repo.owner,
             repo: context.repo.repo,
             issue_number: pull_number,
-            labels: ['auto-merge']
+            labels: [process.env.AUTO_MERGE_LABEL]
           });
 
+    # 3️⃣ Perform Auto-Merge
     - name: Auto-merge Pull Request
       if: ${{ steps.check-mergeable.outputs.result == 'true' }}
       uses: pascalgn/merge-action@v0.1.6
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         merge-method: ${{ env.MERGE_METHOD }}
-        merge-labels: "auto-merge"
+        merge-labels: ${{ env.AUTO_MERGE_LABEL }}
         merge-forks: false
-        merge-commit-message: "Auto-merged PR #${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}"
+        merge-commit-message: |
+          Auto-merged PR #${{ github.event.pull_request.number }} - ${{ github.event.pull_request.title }}
         merge-remove-branch: true
         merge-retries: "3"
         merge-retry-sleep: "10000"
