--- a/.github/workflows/main-ci-cd.yml
+++ b/.github/workflows/main-ci-cd.yml
@@ -5,7 +5,10 @@ on:
     branches: [ master, develop ]
   pull_request:
     branches: [ master, develop ]
-
+    
+  permissions:
+    contents: read
+    packages: write
 jobs:
   # 1️⃣ Test & Build
   test-build:
