--- a/.github/workflows/reusable-security-scan.yml
+++ b/.github/workflows/reusable-security-scan.yml
@@ -6,15 +6,27 @@ on:
 jobs:
   security-scan:
     runs-on: ubuntu-latest
-    
+
     steps:
       # 1️⃣ Checkout repository
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 1.5️⃣ Verify SNYK_TOKEN is set
+      - name: Verify Snyk token exists
+        run: |
+          if [ -z "${SNYK_TOKEN}" ]; then
+            echo "❌ SNYK_TOKEN is empty! Make sure it is added in repo secrets."
+            exit 1
+          else
+            echo "✅ SNYK_TOKEN is set correctly."
+          fi
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+
       # 2️⃣ Run Snyk security scan (requires SNYK_TOKEN secret)
       - name: Run Snyk security scan
-        uses: snyk/actions/node@master   # Use @master, not v2
+        uses: snyk/actions/node@master   # Use @master, reliable version
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
