--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -2,26 +2,47 @@ name: Branch Protection Check
 
 on:
   pull_request:
-    types: [opened, synchronize, reopened]
+    types: [opened, synchronize, reopened, ready_for_review]
+
+permissions:
+  contents: read
+  pull-requests: write
 
 jobs:
   branch-protection:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Check branch protection rules
       uses: actions/github-script@v7
       with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const { data: protection } = await github.rest.repos.getBranchProtection({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            branch: context.payload.pull_request.base.ref
-          });
-          
-          console.log('Branch protection rules:', protection);
-          
-          // Check if required status checks are configured
-          if (protection.required_status_checks) {
-            console.log('Required status checks:', protection.required_status_checks.contexts);
+          try {
+            const baseBranch = context.payload.pull_request.base.ref;
+
+            const { data: protection } = await github.rest.repos.getBranchProtection({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              branch: baseBranch
+            });
+
+            core.info(`✅ Branch protection rules for '${baseBranch}':`);
+            core.info(JSON.stringify(protection, null, 2));
+
+            if (protection.required_status_checks && protection.required_status_checks.contexts.length > 0) {
+              const checks = protection.required_status_checks.contexts;
+              core.info(`🔒 Required status checks: ${checks.join(', ')}`);
+            } else {
+              core.warning('⚠️ Branch does not have required status checks enabled!');
+            }
+
+          } catch (error) {
+            if (error.status === 404) {
+              core.warning('⚠️ Branch protection is not enabled on this branch.');
+            } else if (error.status === 403) {
+              core.warning('⚠️ Missing permissions to access branch protection. Use a token with admin/repo rights.');
+            } else {
+              core.setFailed(`❌ Failed to fetch branch protection: ${error.message}`);
+            }
           }
